syntax = "proto3";

package peers_touch.model.actor.v1;

option go_package = "github.com/peers-labs/peers-touch/station/frame/touch/model;model";

message Actor {
  string id = 1;
  string username = 2;
  string display_name = 3;
  string email = 4;
  string inbox = 5;
  string outbox = 6;
  map<string, string> endpoints = 7;
}

message UserLink {
  string label = 1;
  string url = 2;
}

message UpdateProfileRequest {
  optional string display_name = 1 [json_name = "display_name"];
  optional string note = 2;
  optional string avatar = 3;
  optional string header = 4;
  optional string region = 5;
  optional string timezone = 6;
  repeated string tags = 7;
  repeated UserLink links = 8;
  optional string default_visibility = 9 [json_name = "default_visibility"];
  optional bool manually_approves_followers = 10 [json_name = "manually_approves_followers"];
  optional string message_permission = 11 [json_name = "message_permission"];
  optional int32 auto_expire_days = 12 [json_name = "auto_expire_days"];
}

message ActorList {
  repeated Actor items = 1;
  int64 total = 2;
}

